# wealthfolio

./: .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: pull_request_template.md
addons/: community-addons.md
crates/spending/: Cargo.toml
crates/spending/seeds/presets/: ca.json  gb.json  us.json
crates/spending/src/: activity_classification.rs  error.rs  lib.rs
crates/spending/src/activity_assignments/: mod.rs  model.rs  service.rs  traits.rs
crates/spending/src/activity_events/: mod.rs  model.rs  traits.rs
crates/spending/src/analytics/: mod.rs  model.rs  service.rs
crates/spending/src/budget/: mod.rs  model.rs  service.rs  traits.rs
crates/spending/src/cash_activities/: mod.rs  model.rs  service.rs
crates/spending/src/categories_seed/: mod.rs
crates/spending/src/categorization_rules/: matcher.rs  mod.rs  model.rs  presets.rs  service.rs  traits.rs
crates/spending/src/events/: mod.rs  model.rs  service.rs  traits.rs
crates/spending/src/insight/: mod.rs  model.rs  service.rs
crates/spending/src/settings/: mod.rs  model.rs  service.rs  traits.rs
docs/: lots-valuation.md  performance-calculation-research.md  performance-plan.md  sota-performance-plan.md
e2e/: 01-happy-path.spec.ts  02-activities.spec.ts  03-fx-cash-balance.spec.ts  06-activity-data-grid.spec.ts  07-asset-creation.spec.ts  09-bulk-holdings.spec.ts  10-symbol-mapping-validation.spec.ts  11-stock-split.spec.ts  13-multi-exchange-import.spec.ts  (+4 more)
(+854 files in other folders)
